<resources>
    <string name="app_name">只知</string>

    <string name="action_settings">更多</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="snack_retry">重试</string>

    <!-- 侧边栏目 -->
    <string name="index">要闻</string>
    <string name="news">日报</string>
    <string name="special">专题</string>
    <string name="columnist">专栏</string>
    <string name="article">文章</string>

    <!-- common -->
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期天</string>
    <string name="network_failed">网络连接失败</string>

    <!-- more -->
    <string name="more_author">Super14</string>
    <string name="more_welcome">了解作者</string>
    <string name="more_mode">夜间模式</string>
    <string name="more_setting">设置</string>
    <string name="more_about">关于app</string>




</resources>
