<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:id="@+id/more_btn_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/photo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        app:roundAsCircle="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_toRightOf="@+id/photo"
                        android:text="@string/more_author"
                        android:textColor="@color/gary_30"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/photo"
                        android:text="@string/more_welcome"
                        android:textColor="@color/color_read"
                        android:textSize="14sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/more_btn_feed_back"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/image_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:src="@mipmap/ic_create_write"
                            android:tint="@color/color_read"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/image_3"
                            android:text="@string/more_mode"
                            android:textColor="@color/gary_30"
                            android:textSize="16sp"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="60dp"
                        android:background="@color/line_bg"/>

                    <RelativeLayout
                        android:id="@+id/more_btn_setting"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/image_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:src="@mipmap/ic_drawer_settings"
                            android:tint="@color/color_read"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/image_4"
                            android:text="@string/more_setting"
                            android:textColor="@color/gary_30"
                            android:textSize="16sp"/>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:id="@+id/more_btn_about_app"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/image_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_info_outline"
                        android:tint="@color/color_read"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/image_5"
                        android:text="@string/more_about"
                        android:textColor="@color/gary_30"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>